--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,16 +8,38 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
+   ## I am...
+   My Korean name is SeongKyung Kim also called as Irene. 
+   As for living, I work as a data scientist at a game company. 
+   As for heart, I research many areas that could help vulnerable people. 
+   I particularly am interested in detecting risky and abnormal behaviours online and thereby preventing such destructive behaviours. 
+   
+   
+   ## Professional Experience
+   * Anti-Cheat Data Scientist at Krafton, PUBG studio 
+    * Company Description: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS (PUBG), on multiple platforms. 
+      Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
+    * Roles
+      * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
+      * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
+   
+   ## Education
+   * Georgia Institute of Technology                                                                    2022 - Present
+    * M.S. Computer Science                                                                             2019 - 2020
+   * London School of Economics and Political Science
+    * M.S., Media and Communications (Data & Society) with _Distinction_
+     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
+  
     There are various ways to contact me (ex. linkedin, email, instagram, etc). 
     The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
 
   # This photo will be used in the about section
-  picture:
-    path:            https://via.placeholder.com/128x128
-    # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
+  picture:  /assets/img/me.jpeg
+#     path:            
+#     # srcset is optional, but can be used to provide higher res versions for retina displays
+#     srcset:
+#       1x:            https://via.placeholder.com/128x128
+#       2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
