--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,18 +17,18 @@ author1:
    
    ## Professional Experience
    * Anti-Cheat Data Scientist at Krafton, PUBG studio 
-    * Company Description: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS (PUBG), on multiple platforms. 
+     * Company Description: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS (PUBG), on multiple platforms. 
       Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
-    * Roles
-      * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
-      * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
+     * Roles
+       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
+       * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
    
    ## Education
-   * Georgia Institute of Technology                                                                    2022 - Present
-    * M.S. Computer Science                                                                             2019 - 2020
+   * Georgia Institute of Technology                             <div style="text-align: left"> 2022 - Present </div>   
+     * M.S. Computer Science                                     <div style="text-align: left"> 2019 - 2020 </div>                        
    * London School of Economics and Political Science
-    * M.S., Media and Communications (Data & Society) with _Distinction_
-     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
+     * M.S., Media and Communications (Data & Society) with _Distinction_
+       * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
   
     There are various ways to contact me (ex. linkedin, email, instagram, etc). 
     The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
