--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,9 +24,9 @@ author1:
        * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
    
    ## Education
-   * Georgia Institute of Technology                             <div style="text-align: left"> 2022 - Present </div>   
-     * M.S. Computer Science                                     <div style="text-align: left"> 2019 - 2020 </div>                        
-   * London School of Economics and Political Science
+   * Georgia Institute of Technology                      <div style="text-align: left"> 2022 - Present </div>   
+     * M.S. Computer Science                                                         
+   * London School of Economics and Political Science     <div style="text-align: left"> 2019 - 2020 </div>   
      * M.S., Media and Communications (Data & Society) with _Distinction_
        * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
   
