--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,7 +27,7 @@ author1:
    * Georgia Institute of Technology                      <div style="text-align: left"> 2022 - Present </div>   
      * M.S. Computer Science                                                         
    * London School of Economics and Political Science     <div style="text-align: left"> 2019 - 2020 </div>   
-     * M.S., Media and Communications (Data & Society) with _Distinction_
+     * M.S. Media and Communications (Data & Society) with _Distinction_
        * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
   
     There are various ways to contact me (ex. linkedin, email, instagram, etc). 
