--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,6 +14,7 @@ author1:
    As for heart, I research many areas that could help vulnerable people. 
    I particularly am interested in detecting risky and abnormal behaviours online and thereby preventing such destructive behaviours. 
    
+   
    ## Professional Experience
    #### Anti-Cheat Data Scientist at Krafton, PUBG studio 
      * Company Description: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS (PUBG), on multiple platforms. 
@@ -22,10 +23,11 @@ author1:
        * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
        * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
    
+   
    ## Education
-   ####Georgia Institute of Technology                      ----------- 2022 - Present  
+   #### Georgia Institute of Technology                      2022 - Present  
      * M.S. Computer Science
-   ####London School of Economics and Political Science     ---------- 2019 - 2020
+   #### London School of Economics and Political Science     2019 - 2020
      * M.S. Media and Communications (Data & Society) with _Distinction_
        * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning”
   
