--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,22 +19,22 @@ author1:
 
     ## Education
     ### Georgia Institute of Technology     
-        <p style="text-align:left;">
-        M.S. Computer Science
-            <span style="float:right;">
-            <span style="color:steelblue;">
-               Jan 2022 - Present
-            </span>
-        </p>
+    <p style="text-align:left;">
+       M.S. Computer Science
+        <span style="float:right;">
+        <span style="color:steelblue;">
+            *Jan 2022 - Present*
+        </span>
+    </p>
 
     #### London School of Economics and Political Science 
-        <p style="text-align:left;">
-            M.S. Media and Communications (Data & Society) 
-                <span style="float:right;">
-                <span style="color:steelblue;">
-               Sep 2019 - Dec 2020
-            </span>
-        </p>
+    <p style="text-align:left;">
+        M.S. Media and Communications (Data & Society) 
+        <span style="float:right;">
+        <span style="color:steelblue;">
+            *Sep 2019 - Dec 2020*
+        </span>
+    </p>
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
