--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,7 +18,7 @@ author1:
     
     ## Professional Experience
     #### Anti-Cheat Data Scientist at [Krafton, PUBG studio ](https://krafton.com)
-    * Company Description: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. 
+    * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. 
     Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
     * Roles
       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
@@ -27,22 +27,22 @@ author1:
 
     ## Education
     #### Georgia Institute of Technology     
-    <p style="text-align:left;">
-       M.S. Computer Science
-        <span style="float:right;">
-        <span style="color:steelblue;">
-            *Jan 2022 - Present*
-        </span>
-    </p>
+      <p style="text-align:left;">
+         M.S. Computer Science
+         <span style="float:right;">
+         <span style="color:steelblue;">
+             *Jan 2022 - Present*
+         </span>
+      </p>
     
     #### London School of Economics and Political Science 
-    <p style="text-align:left;">
-        M.S. Media and Communications (Data & Society) 
-        <span style="float:right;">
-        <span style="color:steelblue;">
-            *Sep 2019 - Dec 2020*
-        </span>
-    </p>
+      <p style="text-align:left;">
+          M.S. Media and Communications (Data & Society) 
+          <span style="float:right;">
+          <span style="color:steelblue;">
+              *Sep 2019 - Dec 2020*
+          </span>
+      </p>
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
