--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,7 +31,7 @@ author1:
          M.S. Computer Science
          <span style="float:right;">
          <span style="color:steelblue;">
-             *Jan 2022 - Present*
+             Jan 2022 - Present
          </span>
       </p>
     
@@ -40,7 +40,7 @@ author1:
           M.S. Media and Communications (Data & Society) 
           <span style="float:right;">
           <span style="color:steelblue;">
-              *Sep 2019 - Dec 2020*
+              Sep 2019 - Dec 2020
           </span>
       </p>
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
