--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -34,7 +34,7 @@ author1:
              Jan 2022 - Present
          </span>
       </p>
-    
+
     #### London School of Economics and Political Science 
       <p style="text-align:left;">
           M.S. Media and Communications (Data & Society) 
@@ -43,11 +43,12 @@ author1:
               Sep 2019 - Dec 2020
           </span>
       </p>
+      
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
-
-    There are various ways to reach me (ex. linkedin, email, instagram, etc). The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
+    There are various ways to reach me (ex. linkedin, email, instagram, etc). 
+    The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
 
   # This photo will be used in the about section
   picture:  /assets/img/me.jpeg
