--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,27 +24,24 @@ author1:
       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
        * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
 
-
     ## Education
     #### Georgia Institute of Technology     
     <p style="text-align:left;">
-         M.S. Computer Science
-         <span style="float:right;">
-         <span style="color:steelblue;">
-             Jan 2022 - Present
-         </span>
-    </p>
+      M.S. Computer Science	
+      <span style="float:right;">
+       <span style="color:steelblue;">
+          Jan 2022 - Present
+        </span> </p>
 
     #### London School of Economics and Political Science 
     <p style="text-align:left;">
-          M.S. Media and Communications (Data & Society) 
-          <span style="float:right;">
-          <span style="color:steelblue;">
-              Sep 2019 - Dec 2020
-          </span>
-    </p>
-      
+        M.S. Media and Communications (Data & Society) 
+      <span style="float:right;">
+      <span style="color:steelblue;">
+          Sep 2019 - Dec 2020
+        </span> </p>
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
+
 
 
     There are various ways to reach me (ex. linkedin, email, instagram, etc). 
