--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,7 +15,7 @@ author1:
     Although my interest covers broad areas it comes down to just one theme: **AI for vulnerable people**.
     My goal is to understand humans deeply to make human-centred machines to aid those who are in crisis (haven't exactly figured out which crisis though). 
     In short, I am a data scientist hoping to make the world a slightly better place to live...!
-    
+
     ## Professional Experience
     #### Anti-Cheat Data Scientist at [Krafton, PUBG studio ](https://krafton.com)
     * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. 
@@ -40,12 +40,11 @@ author1:
       <span style="color:steelblue;">
           Sep 2019 - Dec 2020
         </span> </p>
+
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
-
-    There are various ways to reach me (ex. linkedin, email, instagram, etc). 
-    The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
+    There are various ways to reach me (ex. linkedin, email, instagram, etc). The fastest way is probably via my personal email(keks1208@naver.com) or my business email(sk.kim@krafton.com). 
 
   # This photo will be used in the about section
   picture:  /assets/img/me.jpeg
