--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,8 +11,14 @@ author1:
     ## I am..
     My Korean name is SeongKyung Kim but mostly known as Irene. 
     Just like the diversity of the places I was brought up and studied at, which include Seattle, Oklahoma, San Diego, London, and Seoul, I am interested in diverse academic fields.
+    
     I am enthusiastic about human emotions, abnormal and self-destructive behaviours, deep learning, NLP, computer vision, and game AI. 
-    Although my interest covers broad areas it comes down to just one theme: **AI for vulnerable people**.
+    
+    Although my interest covers broad areas it comes down to just one theme: 
+    <p style="text-align:center;">
+    **AI for vulnerable people**
+    </p>
+    
     My goal is to understand humans deeply to make human-centred machines to aid those who are in crisis (haven't exactly figured out which crisis though). 
     In short, I am a data scientist hoping to make the world a slightly better place to live...!
 
