--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,7 +16,7 @@ author1:
     
     Although my interest covers broad areas it comes down to just one theme: 
     <p style="text-align:center;font-weight:bold">
-    **AI for vulnerable people**
+     AI for vulnerable people
     </p>
     
     My goal is to understand humans deeply to make human-centred machines to aid those who are in crisis (haven't exactly figured out which crisis though). 
