--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,7 +28,7 @@ author1:
     Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
     * Roles
       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
-       * Visualise, analyse, and monitor game data to capture and prevent maliscious behaviours in game. 
+       * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
 
     ## Education
     #### Georgia Institute of Technology <div style="color:steelblue;float:right"> Jan 2022 - Present </div>
