--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ author1:
     In short, I am a data scientist hoping to make the world a slightly better place to live...!
 
     ## Professional Experience
-    #### Anti-Cheat Data Scientist at [Krafton, PUBG studio ](https://krafton.com)<div style="color:steelblue;float:right"> Feb 2021 - Present </div>
+    #### Anti-Cheat Data Scientist at [Krafton, PUBG studio ](https://krafton.com)<div style="color:steelblue;float:right" markdown=1> Feb 2021 - Present </div>
     * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. 
     Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
     * Roles
@@ -31,11 +31,11 @@ author1:
        * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
 
     ## Education
-    #### Georgia Institute of Technology <div style="color:steelblue;float:right"> Jan 2022 - Present </div>
+    #### Georgia Institute of Technology <div style="color:steelblue;float:right" markdown=1> Jan 2022 - Present </div>
     M.S. Computer Science
 
 
-    #### London School of Economics and Political Science <div style="color:steelblue;float:right"> Sep 2019 - Dec 2020 </div>
+    #### London School of Economics and Political Science <div style="color:steelblue;float:right" markdown=1> Sep 2019 - Dec 2020 </div>
     M.S. Media and Communications (Data & Society)
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
