--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,11 +31,15 @@ author1:
        * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
 
     ## Education
-    #### Georgia Institute of Technology <div style="color:steelblue;float:right" markdown=1> Jan 2022 - Present </div>
+    <h3  align="left"> Georgia Institute of Technology 
+    <span style=color:steelblue;float:right;font-size:15px;> Jan 2022 - Present </span> 
+    </h3> 
     M.S. Computer Science
 
 
-    #### London School of Economics and Political Science <div style="color:steelblue;float:right" markdown=1> Sep 2019 - Dec 2020 </div>
+    <h3  align="left"> London School of Economics and Political Science
+    <span style=color:steelblue;float:right;font-size:15px;> Sep 2019 - Dec 2020 </span> 
+    </h3> 
     M.S. Media and Communications (Data & Society)
     * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
