--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -30,21 +30,16 @@ author1:
       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
        * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
 
-    ## Education
-    <h3  align="left"> Georgia Institute of Technology 
-    <span style=color:steelblue;float:right;font-size:15px;> Jan 2022 - Present </span> 
-    </h3> 
-    M.S. Computer Science
+    Education
+    ---------
+    Jan 2022 - Present
+    :   **Georgia Institute of Technology**
+        *M.S. Computer Science
 
-
-    <h3  align="left"> London School of Economics and Political Science
-    
-    <span style=color:steelblue;float:right;font-size:15px;> Sep 2019 - Dec 2020 </span> 
-    
-    </h3> 
-    
-    M.S. Media and Communications (Data & Society)
-    * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
+    Sep 2019 - Dec 2020
+    :   **London School of Economics and Political Science**
+        *M.S. Media and Communications (Data & Society)
+        * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
   # This photo will be used in the about section
