--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,13 +22,16 @@ author1:
     My goal is to deeply understand humans to make human-centred machines to aid those who are in need. In short, I am a data scientist hoping to make the world a slightly better place to live...!
 
 
-    ## Professional Experience
-    #### Anti-Cheat Data Scientist at [Krafton, PUBG studio ](https://krafton.com)<div style="color:steelblue;float:right" markdown=1> Feb 2021 - Present </div>
-    * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. 
-    Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
+    Professional Experience
+    ---------
+    Feb 2021 - Present
+    :   **Anti-Cheat Data Scientist at [Krafton, PUBG studio](https://krafton.com)**
+    
+    * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
+
     * Roles
       * Leading a team project to build, develop, and deploy machine learning model to automatically detect hack users. 
-       * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
+      * Visualise, analyse, and monitor game data to mitigate cheating behaviours online.
 
     Education
     ---------
