--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,7 +25,7 @@ author1:
     Professional Experience
     ---------
     Feb 2021 - Present
-    :   **Anti-Cheat Data Scientist at [Krafton, PUBG studio](https://krafton.com)**
+    :   <font color="steelblue"> **Anti-Cheat Data Scientist at [Krafton, PUBG studio](https://krafton.com)** </font>
     
     * <ins>Company Description</ins>: PUBG Corporation is the publisher and developer of the 2017 blockbuster battle royale video game, PLAYERUNKNOWN’S BATTLEGROUNDS(PUBG), on multiple platforms. Since its release, PUBG has received worldwide acclaim, achieving seven Guinness World Records and winning multiple game awards worldwide.
 
@@ -36,12 +36,12 @@ author1:
     Education
     ---------
     Jan 2022 - Present
-    :   **Georgia Institute of Technology**
-        *M.S. Computer Science
+    :   <font color="steelblue"> **Georgia Institute of Technology** </font>
+        * M.S. Computer Science
 
     Sep 2019 - Dec 2020
-    :   **London School of Economics and Political Science**
-        *M.S. Media and Communications (Data & Society)
+    :   <font color="steelblue"> **London School of Economics and Political Science** </font>
+        * M.S. Media and Communications (Data & Society)
         * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
