--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -37,12 +37,12 @@ author1:
     ---------
     Jan 2022 - Present
     :   <font color="steelblue"> **Georgia Institute of Technology** </font>
-        * M.S. Computer Science
+          * M.S. Computer Science
 
     Sep 2019 - Dec 2020
-    :   <font color="steelblue"> **London School of Economics and Political Science** </font>
-        * M.S. Media and Communications (Data & Society)
-        * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
+    :   **<font color="steelblue">London School of Economics and Political Science</font>** 
+          * M.S. Media and Communications (Data & Society)
+          * Dissertation: “Combating Cyberbullying on Social Media: Cyberbullying Detection Using Deep Learning” with *Distinction*
 
 
   # This photo will be used in the about section
