--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,10 +10,9 @@ Irene:
   about:             |
     Irene Kim 
     ============
-    My Korean name is SeongKyung Kim but mostly known as Irene. 
+    My Korean name is SeongKyung Kim. 
 
-    Just like the diversity of the places I was brought up and studied at, which include Seattle, Oklahoma, San Diego, London, and Seoul, I am interested in diverse academic fields. I am enthusiastic about human emotions, abnormal and self-destructive behaviours, deep learning, NLP, computer vision, and game AI. 
-
+    I am interested in many different academic field such as deep learning, game AI, virtual reality, and HCI.
     Although my interest covers broad areas it comes down to one theme: 
     <p style="text-align:center;font-weight:bold;color:steelblue">
          AI for vulnerable people
