--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,13 +12,15 @@ Irene:
     ============
     My Korean name is SeongKyung Kim. 
 
-    I am interested in many different academic field such as deep learning, game AI, virtual reality, and HCI.
+    I am interested in many different academic field such as deep learning, game AI, VR, and HCI.
     Although my interest covers broad areas it comes down to one theme: 
     <p style="text-align:center;font-weight:bold;color:steelblue">
          AI for vulnerable people
     </p>
 
-    My goal is to deeply understand humans to make human-centred machines to aid those who are in need. In short, I am a data scientist hoping to make the world a slightly better place to live...!
+    My goal is to deeply understand humans to make human-centred machines to aid those who are in need. 
+    Specifically I am passionate about understanding, detecting, and preventing abnormal and self-destructive behaviours leveraging AI and games. 
+    In short, I am a data scientist hoping to make the world a slightly better place to live...!
 
 
     Professional Experience
