--- a/_config.yml
+++ b/_config.yml
@@ -53,9 +53,9 @@ menu:
   - title:             Tech Blog
     url:               https://skirene.medium.com
   - title:             Research Interests
-    url:               /example/
-  - title:             Life
     url:               
+  - title:             Life
+    url:               /Life/
     
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
