--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ menu:
     url:               /about/
   - title:             Tech Blog
     url:               https://skirene.medium.com
-  - title:             Research Interests
-    url:               
   - title:             Life
-    url:               /Life/
+    url:               /life/
+-co title:             Research Interests
+    url:               
     
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
