--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ menu:
   - title:             Life
     url:               /life/
   - title:             Research Interests
-    url:               
+    url:               /Research/
     
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
