--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
   - title:             Tech Blog
     url:               https://skirene.medium.com
   - title:             Research Interests
-    url:               /Research/
+    url:               /research/
   - title:             Life
     url:               /life/
     
